--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <title>로그인 - QuadCore</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
-<body>
+<body class="auth-mode">
 
 <!-- ============================================== -->
 <!-- 로그인 페이지                                   -->
