--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
     <title>회원가입 </title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
-<body>
+<body class="auth-mode">
 
 <!-- ============================================== -->
 <!-- 계정 등록 페이지                                -->
